# anofox-forecast

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  DOCKERFILE_FIX.md  DUCKDB_EXTENSION_DESIGN_V3.md  ETS_REWRITE_PLAN.md  FINAL_COMPLETE_SUMMARY.md  FINAL_STATUS.md  GUIDES_COMPLETE.md  GUIDE_REORGANIZATION.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  LICENSE  LINKER_ERROR_SUMMARY.md  MULTI_LANGUAGE_GUIDES_COMPLETE.md  Makefile  PR_DESCRIPTION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README.md.backup  REFACTOR_DOCS.md  REFACTOR_SUMMARY.md  RELEASE_NOTES_v0.2.0.md  REORGANIZATION_SUMMARY.md  SUBMODULE_CONVERSION.md  TELEMETRY.md  TESTING_COMPLETE.md  THIRD_PARTY_NOTICES  THIRD_PARTY_NOTICES.md  TIMESTAMP_FEATURE.md  TS_FILL_GAPS_PERFORMANCE_ANALYSIS.md  VICTORY_REPORT.md  demo_forecast_timestamps.sql  (+20 more)
anofox-time/: .gitignore  CMakeLists.txt  LICENSE  MFLES.md  MFLES_IMPLEMENTATION.md  README.md  anofox-time.map  compile_commands.json  mfles_siegel_test  vcpkg.json
anofox-time/examples/: CMakeLists.txt  README.md  airpassengers_benchmark.cpp  auto_arima_example.cpp  baseline_example.cpp  ensemble_example.cpp  exponential_smoothing_example.cpp  intermittent_example.cpp  mfles_example.cpp  monitoring_workflow.cpp  mstl_example.cpp  pipeline_forecasting.cpp  tbats_example.cpp  theta_example.cpp
anofox-time/include/anofox-time/: quick.hpp  validation.hpp
anofox-time/licences/: Apache-2.0.txt
anofox-time/src/: validation.cpp
anofox-time/src/changepoint/: bocpd.cpp
anofox-time/src/clustering/: dbscan.cpp
anofox-time/src/detectors/: mad.cpp
anofox-time/src/features/: feature_calculators.cpp  feature_math.cpp  feature_registry.cpp
anofox-time/src/models/: adida.cpp  arima.cpp  auto_arima.cpp  auto_ets.cpp  auto_mfles.cpp  auto_mstl.cpp  auto_tbats.cpp  auto_theta.cpp  croston_classic.cpp  croston_optimized.cpp  croston_sba.cpp  dtw.cpp  dynamic_optimized_theta.cpp  dynamic_theta.cpp  ensemble.cpp  ets.cpp  ets_core_statsforecast.cpp  garch.cpp  holt.cpp  holt_winters.cpp  imapa.cpp  method_name_wrapper.cpp  mfles.cpp  mstl_forecaster.cpp  naive.cpp  optimized_theta.cpp  random_walk_drift.cpp  seasonal_es.cpp  seasonal_es_optimized.cpp  seasonal_naive.cpp  seasonal_window_average.cpp  ses.cpp  ses_optimized.cpp  sma.cpp  tbats.cpp  theta.cpp  theta_pegels.cpp  theta_utils.cpp  tsb.cpp
anofox-time/src/optimization/: ets_gradients.cpp  ets_gradients_checkpointing.cpp  ets_gradients_simd.cpp  lbfgs_optimizer.cpp  theta_gradients.cpp
anofox-time/src/outlier/: dbscan_outlier.cpp
anofox-time/src/seasonality/: analyzer.cpp  detector.cpp  mstl.cpp  stl.cpp
anofox-time/src/selectors/: auto_selector.cpp
anofox-time/src/transform/: pipeline.cpp  transformers.cpp
anofox-time/src/utils/: cross_validation.cpp  intermittent_utils.cpp  logging.cpp  metrics.cpp  nelder_mead.cpp  robust_regression.cpp
anofox-time/tests/: auto_mfles_test.cpp  mfles_cv_test  mfles_cv_test.cpp  mfles_manual_test.cpp  mfles_moving_medians_test  mfles_moving_medians_test.cpp  mfles_presets_test  mfles_presets_test.cpp  mfles_siegel_test.cpp
anofox-time/tests/changepoint/: test_bocpd.cpp
anofox-time/tests/clustering/: test_dbscan.cpp
anofox-time/tests/common/: metrics_helpers.hpp  monitoring_fixtures.hpp  time_series_helpers.hpp
anofox-time/tests/core/: test_distance_matrix.cpp  test_forecast.cpp  test_time_series.cpp
anofox-time/tests/models/: test_arima.cpp  (+22 more)
benchmark/: 10k_series_synthetic_test.sql  Makefile  README.md  check_statsforecast_mnm.py  compare_intermittent_simple.py  compare_mfles.py  compare_simple_models.py  comprehensive_ets_validation.py  debug_holtwinters.py  debug_mult_season.py  debug_seasonal_components.py  ets_full_results.txt  evaluation.py  m5.sql  m5_benchmark.py  m5_benchmark.sql  m5_test.sql  pyproject.toml  python_eval_ets.py  run_all.py  run_all_benchmarks.py  test_hw_admissibility_fix.py  test_hw_final.py  tune_mfles_params.py  validate_ets_rewrite.py  validate_mfles.py
benchmark/arima_benchmark/: README.md  run.py  run_statsforecast.py
benchmark/baseline_benchmark/: README.md  run.py  run_benchmark.py  run_statsforecast.py
benchmark/configs/: __init__.py  arima.py  baseline.py  ets.py  mfles.py  mstl.py  statsforecast_arima.py  statsforecast_baseline.py  statsforecast_ets.py  statsforecast_mfles.py  statsforecast_mstl.py  statsforecast_theta.py  theta.py
benchmark/docker/: Dockerfile  Dockerfile.duckdb  Dockerfile.python-statsforecast  README.md  docker-compose.yml  download_extension.sh  m5_autoarima_benchmark.py  memory_benchmark.py  setup_aws_resources.sh
benchmark/ets_benchmark/: README.md  run.py  run_benchmark.py  run_statsforecast.py
benchmark/mfles_benchmark/: README.md  analyze_d2139_explosion.py  analyze_series_characteristics.py  compare_forecasts.py  component_comparison.py  debug_d2139.py  debug_existing_results.py  debug_single_series.py  diagnose_automfles.py  run.py  run_statsforecast.py  test_shell.sql  test_worst_series.py
benchmark/mstl/: mstl_100k_series_perf.sql  mstl_10k_series.sql  mstl_short_series_fallback.sql  mstl_two_seasonalities.sql
benchmark/mstl_benchmark/: OPTIMIZATIONS.md  README.md  run.py  run_statsforecast.py
benchmark/seasonality_detection/: .gitignore  README.md  _quarto.yml  render.sh  requirements.txt  seasonality_detection_report.qmd
benchmark/sql/: 10k_series_synthetic_test.sql  m5_benchmark.sql
benchmark/src/: __init__.py
benchmark/streaming_api_profiling/: PROFILING_RESULTS.md  README.md  generate_test_data.sql  profile_functions.py  profile_results_1m.json  profile_results_fill.json
benchmark/theta_benchmark/: README.md  run.py  run_anofox_theta.py  run_benchmark.py  run_statsforecast.py
benchmark/timeseries_features/: README.md  compare_results.sql  create_anofox_features.sql  create_data.sql  examples.sql  generate_cpp_unit_test_expected_values.py  smoke_test_ts_features.sql  tsfresh_features.py
crates/anofox-fcst-core/: Cargo.toml
crates/anofox-fcst-ffi/: Cargo.toml  build.rs  cbindgen.toml
(+1306 files in other folders)
