[workspace]
members = ["crates/anofox-fcst-core", "crates/anofox-fcst-ffi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Simon Mueller"]
repository = "https://github.com/DataZooDE/anofox-forecast-extension"

[workspace.dependencies]
# Core forecasting library
anofox-forecast = "0.4.1"

# Functional data analysis (seasonality, peaks, detrending)
# Note: default-features disabled to allow WASM builds; features enabled per-target in crates
fdars-core = { version = "0.3", default-features = false }

# FFI and memory management
libc = "0.2"
thiserror = "2.0"

# Date/time handling
chrono = "0.4"

# Statistics
statrs = "0.18"

# Regression analysis
anofox-regression = "0.4"
faer = { version = "0.23", default-features = false, features = ["std", "linalg"] }

# Telemetry (optional)
ureq = { version = "2.9", features = ["json", "tls"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true  # Strip debug symbols for smaller binaries

# Patch argmin to use stable Rust compatible version
# argmin 0.11.0 uses unstable `is_multiple_of` feature (Rust 1.87+)
# This fork replaces it with modulo operations for Rust 1.86 compatibility
[patch.crates-io]
argmin = { git = "https://github.com/DataZooDE/argmin", branch = "fix/stable-rust-compat" }
argmin-math = { git = "https://github.com/DataZooDE/argmin", branch = "fix/stable-rust-compat" }
