[project]
name = "benchmark"
version = "0.1.0"
description = "ARIMA Benchmark Suite - Comparing anofox-forecast with other implementations"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "duckdb>=1.4.1",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "pyarrow>=10.0.0",
    "numpy>=1.26.0",
    "fire>=0.7.0",
    "tabulate>=0.9.0",
    "datasetsforecast>=0.0.8",
]

[project.optional-dependencies]
comparison = [
    "statsforecast>=2.0.2",
    "pmdarima>=2.0.4",
    "prophet>=1.1.6",
]
