[package]
name = "anofox-fcst-core"
description = "Core forecasting library for anofox-forecast DuckDB extension"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anofox-forecast = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
statrs = { workspace = true }

[dev-dependencies]
approx = "0.5"
