[package]
name = "anofox-fcst-ffi"
description = "C FFI boundary for anofox-forecast DuckDB extension"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["staticlib"]

[features]
default = ["telemetry"]
telemetry = ["ureq", "serde_json", "uuid"]

[dependencies]
anofox-fcst-core = { path = "../anofox-fcst-core" }
libc = { workspace = true }

# Telemetry (optional)
ureq = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[build-dependencies]
cbindgen = "0.27"
